--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
